Fix: animation on safari

--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -61,7 +61,7 @@
 			&:nth-of-type(1) {
 				position: absolute;
 				right: 65px;
-				bottom: 1.9vw;
+				bottom: 6%;
 				width: 148px;
 
 				@include is-sp {
