--- a/src/assets/scss/sections/_header.scss
+++ b/src/assets/scss/sections/_header.scss
@@ -105,7 +105,7 @@
 			}
 
 			img {
-				&:nth-of-type(1) {
+				&:nth-of-type(2) {
 					padding: 0;
 					width: 224px;
 					height: auto;
@@ -124,9 +124,9 @@
 					}
 				}
 
-				&:nth-of-type(2) {
-					position: relative;
-					bottom: 80%;
+				&:nth-of-type(1) {
+					position: absolute;
+					top: 20%;
 					left: 10%;
 					width: 868px;
 					z-index: -1;
@@ -159,9 +159,9 @@
 				}
 
 				&:nth-of-type(4) {
-					position: relative;
+					position: absolute;
 					left: 0;
-					bottom: 70%;
+					bottom: 0;
 					width: 600px;
 
 					@include is-sp {
@@ -190,10 +190,7 @@
 			}
 		}
 
-		.pc {
-			display: block;
-			position: relative;
-
+		svg {
 			@include is-sp {
 				display: none;
 			}
@@ -212,24 +209,35 @@
 			stroke-dasharray: 900;
 			stroke-dashoffset: -900;
 			animation: dash 1.5s linear forwards;
+
+			@include is-sp {
+				display: none;
+			}
 		}
 
 		@keyframes dash {
+			from {
+				stroke-dashoffset: 900;
+			}
 			to {
-				stroke-dashoffset: 0;
+				stroke-dashoffset: 1800;
 			}
 		}
 
 		.second {
 			stroke-dasharray: 1160;
-			stroke-dashoffset: -1160;
+			stroke-dashoffset: 1160;
 			animation: dash2 1.5s linear forwards;
 			animation-delay: 1.5s;
+
+			@include is-sp {
+				display: none;
+			}
 		}
 
 		@keyframes dash2 {
 			to {
-				stroke-dashoffset: -2320;
+				stroke-dashoffset: 0;
 			}
 		}
 
@@ -237,12 +245,16 @@
 			opacity: 0;
 			animation: dot forwards 0.1s;
 			animation-delay: 1.8s;
+
+			@include is-sp {
+				display: none;
+			}
 		}
 
 		@keyframes dot {
 			0% {
 				opacity: 0;
-			} /* more concise! */
+			}
 			100% {
 				opacity: 1;
 			}
